--- a/Oksitanan_kel'.mw
+++ b/Oksitanan_kel'.mw
@@ -1,9 +1,11 @@
-[[Fail:Occitania blanck map.PNG|thumb|right|250px|Oksitanan kelen levigandusen kart.]]
-'''Oksitanan kel'''' (ičeze nimitused: ''occitan'', ''lenga d'òc'') om üks' oksitano-romanižiš, [[indoevropižed keled|indoevropižiš kelišpäi]], kudambal pagištas [[Francii|Francijan]] suves, [[Italii|Italijan]] lodehes, [[Ispanii|Ispanijan]] pohjoižpäivnouzmas i [[Monako]]s.
+[[Fail:Occitania blanck map.PNG|thumb|right|250px|Oksitanan kelen levigandusen kart]]
+'''Oksitanan kel'''' (ičeze nimitused: ''occitan'', ''óucitan'', virktas [u(t)siˈtaⁿ, u(t)siˈtɔ, ukʃiˈtɔ], mugažo ''lenga d'òc'' [ˈleŋɡɔ ˈðɔ(k)]; {{lang-fr|occitan, langue d’oc}}) om üks' oksitano-romanižiš, [[indoevropižed keled|indoevropižiš kelišpäi]], kudambal pagištas [[Francii|Francijan]] suves (istorine [[Oksitanii (istorine agj)|Oksitanii]]-agj), [[Italii|Italijan]] lodehes, [[Ispanii|Ispanijan]] pohjoižpäivnouzmas i [[Monako]]s.
 
-Kel' om regionaliženke oficialiženke statusanke Ispanijas (Katalonijan pohjoižes) i Italijas (penen rahvahan kel').
+Kel' om regionaliženke oficialiženke statusanke Ispanijas (sen [[Katalonii|Katalonijan]] pohjoižes) i Italijas (penen rahvahan kel').
 
-Pagižijoiden lugu kuti mamankel' — 800 tuh. (2007), Francijas tobjimalaz. Oksitanan kirjkel' om [[latinan kirjamišt]]on pohjal.
+Pagižijoiden lugu kuti mamankel' — 800 tuh. (2007), Francijas tobjimalaz, kaik 2 mln ristituid kävutadas kel't muupäiväližes elos. Oksitanan kirjkel' om [[latinan kirjamišt]]on pohjal. Kirjankel' om tetab 10. voz'sadaspäi i oli levitadud, konz Francijan suvi oli ripmatomudenke. Oksitanan kirjankelen variant paginoiden avarombal alusel om sätud 19. voz'sadan lopus.
+
+Ühtenzoittas paginoid kahteks vai koumeks gruppaks: pohjoine, suvine (vai keskoksitanan), gaskonin (erased lugetas sidä toižeks keleks).
 
 == Homaičendad ==
 <references/>
