--- a/Nazarovo_(Krasnojarskan_rand).mw
+++ b/Nazarovo_(Krasnojarskan_rand).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 50,397
  | Voz' = 2017
  | Pind = 47
- | Fail = Khram nazarowo.jpg
+ | Fail = Nazarovo Central Square.jpg
  | Pämez' = Sergei Suharev<br />(kül'mku 2017—)
  | Telefonkod = +7-39155-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -35,9 +35,16 @@ Avtobusad da taksid oma kundaližeks transportaks lidnas. Nazarovo-raudtestancii
 
 Nazarovon agrarine i energetižen sauvomižen tehnikumad oma professionaližen opendusen aluzkundoikš.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник борцам за советскую власть, погибшим во время подавления Сережского контрреволюцонного вооружённого мятежа 1920 года.jpg|Muštnik vn 1920 nevondkundaližen tobmuden kaičijoile
+Khram nazarowo.jpg|Jumalanmaman Katken pühäpert', vn 2007 nägu
+Музей города Назарово1.jpg|Muzejižozutelendkeskuz (2013)
+</gallery>
+
 == Irdkosketused ==
 * [http://www.nazarovograd.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''nazarovograd.ru'').] {{ref-ru}}
-{{Commons|Category:Nazarovo, Krasnoyarsk Krai}}
+{{Commons|Category:Nazarovo (Krasnoyarsk Krai)}}
 
 {{Krasnojarskan randan lidnad}}
 
