--- a/Minusinsk.mw
+++ b/Minusinsk.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Minusinsk<br />Минусинск
  | Lidnanznam = Coat of Arms of Minusinsk (1854).png
- | Flag = Flag of Minusinsk (Krasnoyarsk kray) (2001).png
+ | Flag = Flag of Minusinsk (2020).png
  | Lidnanznam text = Minusinskan lidnanznam
  | Flag text = Minusinskan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 68,410
  | Voz' = 2017
  | Pind = 17.7
- | Fail = Минусинский краеведческий музей.JPG
+ | Fail = Стела на въезде в город Минусинск.jpg
  | Pämez' = Dmitrii Merkulov<br />(sügüz'ku 2015—)
  | Telefonkod = +7-39132-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -17,7 +17,9 @@
 '''Minusinsk''' ({{lang-ru|Минусинск}}) om [[Venäma]]n lidn da lidnümbrik [[Krasnojarskan rand]]an suvipäivlaskmas. Se om [[Minusinskan rajon]]an administrativižeks keskuseks mugažo, ei mülü rajonha.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1739 kuti Minjusinskoje-žilo ({{lang-ru|село Миньюсинское}}), nimitihe Minus-jogen mödhe ({{lang-ru|Минуса}}). Žilo sai ümbrikon keskusen i lidnan statusad vl 1822 udes Jenisein gubernijas. Lidn šingotase sömtegimišton (oludtegim, sömkombinat, konditerine fabrik, lihategim, maidtegim) i mecanümbriradmižen edheotandoil, mugažo geologižen ecmižen mašiništon tegim radab lidnas.
+Eländpunktan aluz om pandud vl 1739 kuti Minjusinskoje-žilo ({{lang-ru|село Миньюсинское}}), nimitihe Minus-jogen mödhe ({{lang-ru|Минуса}}). Žilo sai ümbrikon keskusen i lidnan statusad vl 1822 udes Jenisein gubernijas.
+
+Minusinsk šingotase sömtegimišton (oludtegim, sömkombinat, konditerine fabrik, lihategim, maidtegim) i mecanümbriradmižen edheotandoil, mugažo geologižen ecmižen mašiništon tegim radab lidnas.
 
 == Geografijan andmused ==
 Lidn sijadase Minusinskan katl'usen keskuses, mecstepin zonas, [[Jenisei]]n oiktan laivhijaman muugotil randoil, 250 m ü.m.t. keskmäižel korktusel. Matkad [[Krasnojarsk]]hasai om 267 km pohjoižhe orhal vai 434 km «Jenisei»-avtotedme (R-257). Lähembaine lidn om [[Abakan]] 10 km päivlaskmha orhal vai 15 km avtotedme.
@@ -25,9 +27,18 @@ Lidn sijadase Minusinskan katl'usen keskuses, mecstepin zonas, [[Jenisei]]n oikt
 Lidnanvuitte Vihand Kangaz-žilo ({{lang-ru|Зелёный Бор}}, 2 925 rist. vl 2017) mülüb lidnümbrikho Minusinskan ližaks, Minusinsk-raudtestacii sijadase neciš žilos, 12 km suvipäivlaskmha. Lidnümbrikon pind — 60,5 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 71 170 ristitud, lidnümbrikon — 73 948 ristitud. Kaikiš suremb ristitišt oli 74 400 eläjad vl 1992. Vl 2017 kaik 71 335 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 71 170 ristitud, lidnümbrikon — 73 948 ristitud. Kaikiš suremb ristitišt oli 74 400 eläjad vl 1992. Vl 2017 kaik 71 335 ristitud elihe lidnümbrikos.
 
 Professionaližen opendusen aluzkundad: Minusinskan medicinine tehnikum, maižandusen kolledž, pedagogine kolledž, kul'turan da čomamahton kolledž, mugažo Krasnojarskan i Moskvan üläopendusen aluzkundoiden 3 filialad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Минусинск, ул.Гоголя 68.jpg|Lidnan administracijan sauvuz (2012)
+Спасский Собор - panoramio.jpg|Spasan Toižetamižen kafedraline päjumalanpert', vn 2014 nägu
+Belova.jpg|Minusinskan medicinine tehnikum (2005, ende Belova-torgovannaižen pert')
+Осень, Муз. школа - panoramio.jpg|Muzikškol lapsiden täht (2015)
+Минусинский краеведческий музей.JPG|Minusinskan kodirandantedištandmuzei
+</gallery>
 
 == Irdkosketused ==
 * [http://minusinsk.info/ Lidnan tobmuden aluzkundoiden oficialine sait (''minusinsk.info'').] {{ref-ru}}
