--- a/Minusinsk.mw
+++ b/Minusinsk.mw
@@ -37,7 +37,7 @@ Professionaližen opendusen aluzkundad: Minusinskan medicinine tehnikum, maižan
 Спасский Собор - panoramio.jpg|Spasan Toižetamižen kafedraline päjumalanpert', vn 2014 nägu
 Belova.jpg|Minusinskan medicinine tehnikum (2005, ende Belova-torgovannaižen pert')
 Осень, Муз. школа - panoramio.jpg|Muzikškol lapsiden täht (2015)
-Минусинский краеведческий музей.JPG|Minusinskan kodirandantedištandmuzei
+МУЗЕЙ МАРТЬЯНОВА В МИНУСИНСКЕ-.JPG|Minusinskan kodirandantedištandmuzei N.M. Martjanovan nimed (2013, kaks' sauvust)
 </gallery>
 
 == Irdkosketused ==
