--- a/Love_Me_or_Hate_Me.mw
+++ b/Love_Me_or_Hate_Me.mw
@@ -1,6 +1,6 @@
-'''«Love Me or Hate Me»''' (''Armasta mindai vai ala navedi mindai'') om [[Lady Sovereign]]-pajatajan 5. pajo [[hiphop]]-žanras i 13. pajo (remiks) debütižes «[[Public Warning]]»-studijanal'bomas da ühtennimine singl. Ned oma pästtud [[2006]]-nden voden redukul. Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«Love Me or Hate Me»''' (''Armasta mindai vai ala navedi mindai'') om britanižen [[Lady Sovereign]]-pajatajan 5. pajo [[hiphop]]-žanras i 13. pajo (remiks) debütižes «[[Public Warning]]»-studijanal'bomas da ühtennimine singl. Ned oma pästtud [[2006]]-nden voden redukul. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
-Pajon tegijad oma pajatai iče i singlan [[Dr. Luke]]-prodüser (Lukaš Gotval'd). Singl tegihe kudendeks lugul, sen erazvuiččed variantad oma pästtud Surhe Britanijha, AÜV:oihe (750 tuhad kopijoid) i Saksanmaha.
+Pajon tegijad oma pajatai iče i singlan [[Dr. Luke]]-prodüser (Lukaš Gotval'd). Singl tegihe kudendeks lugul i nelländeks debütižes al'bomaspäi. Singlan erazvuiččed variantad oma pästtud Surhe Britanijha, [[Amerikan Ühtenzoittud Valdkundad|AÜV:oihe]] (750 tuhad kopijoid) i Saksanmaha amerikaižel [[Def Jam Recordings|Def Jam]]-leiblal.
 
 Kompozicii om mülütadud «[[Need for Speed Carbon]]»-kompjutervändon saundtrekoihe. Videoklip pajole om sätud ''[[Tetris]]''-vändon blokoiden nägul.
 
