--- a/Nauman_kirj.mw
+++ b/Nauman_kirj.mw
@@ -1,9 +1,9 @@
 [[Fail:Naum e Nínive destruída (Biblioteca Nacional de Portugal ALC.455, fl.300).png|thumb|right|250px|''Naum i Ninevijan murenduz'', pen' kuva [[Alkobasan Jumalanmaman jumalankodi]]n Biblijaspäi, 1220-nded voded, Portugalii]]
 '''Nauman kirj''' ({{lang-he|נַחוּם}} ''Nahum'', {{lang-el|Ναοὺμ}} ''Naoum'', {{lang-la|Nahum}}, {{lang-ru|Книга Наума}}) om evrejan [[Tanah]]-biblijan kirj [[Neviim]]-jagusespäi («endustajad»), hristanuskondan 34. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
-Kirj om sätud [[Naum (endustai)|Naum]]-endustajal 7. voz'sadal EME vai sen aigemba. Original om kirjutadud evrejan kelel. Koume jagust om kirjas.
+Kirj om sätud [[Naum (endustai)|Naum]]-endustajal (muga mainitase kirjas augus) 7. voz'sadal EME vai sen aigemba. Original om kirjutadud evrejan kelel. Koume jagust om kirjas.
 
-Se om runod, poem vägevan Assirižen imperijan [[Ninevii]]-pälidnan murendusen polhe. Edestihe poemad pühäpertiš. Poetine kirjkel' harakterizuib kirjad, om äi rindatusid da [[metafor]]id.
+Säduz om runod, poem vägevan Assirižen imperijan [[Ninevii]]-pälidnan murendusen polhe (612. voz' e.m.e.), starinoičese sen süiš (hengeline kahnuz). Edestihe poemad pühäpertiš ezimeletaden. Poetine kirjkel' harakterizuib kirjad, om äi rindatusid da [[metafor]]id.
 
 == Homaičendad ==
 <references />
