*Empty MediaWiki Message*

--- a/Lodehline_aviabaz.mw
+++ b/Lodehline_aviabaz.mw
@@ -1,6 +1,6 @@
 '''Lodehline aviabaz''' ({{lang-ru|Северо-западная авиабаза}}) oli [[Venäma]]n edheotand [[Petroskoi]]-lidnan «[[Letked (lendimport)|Letked]]»-lendimportas ({{lang-ru|Пески}}) vll 1949−2014. Mülüi valdkundaližhe «[[Avialesoohrana]]»-organizacijha.
 
-Bazan personal tegi aerofotokuvid i kacli lämoipaloiden olmatomut mecoiš, radoi maižandusen i kivivoinveimiden kompanijoiden pakitoitusiden mödhe. Oli palakundoid i lendimpöudoid [[Karjal]]an rajonkeskusidme, lendandlavuded oliba neniš eländpunktoiš: [[Kalevala (žilo)|Kalevala]], [[Kem']], [[Pudož]], [[Segež]], [[Sortaval]]. Tegihe regulärižid passažirlendandoid i čarterreisid Karjalan čuradusidme: Petroskoihesai, Pudožhasai da [[Kiži]]hesai. Kaik oli ühesa lendint i viž punolendint aviabazan territorijan südäimes.
+Bazan personal tegi aerofotokuvid i kacli lämoipaloiden olmatomut mecoiš, radoi maižandusen i kivivoinveimiden kompanijoiden pakitoitusiden mödhe. Oli palakundoid i lendimpöudoid [[Karjal]]an rajonkeskusidme, lendandlavuded oliba neniš eländpunktoiš: [[Kalevala (žilo)|Kalevala]], [[Kem' (lidn)|Kem']], [[Pudož]], [[Segež]], [[Sortaval]]. Tegihe regulärižid passažirlendandoid i čarterreisid Karjalan čuradusidme: Petroskoihesai, Pudožhasai da [[Kiži]]hesai. Kaik oli ühesa lendint i viž punolendint aviabazan territorijan südäimes.
 
 Sirtihe edheotandad tazovaldkundan tobmuden alištushe vl 2007. Aviabaz om likvidiruidud vn 2014 1. päiväl heinkud, sidä kesken suren velgan tagut, personalan i tehnikan terveh pala om sirtud lähižhe «[[Petroskoi (lendimport)|Petroskoi]]»-lendimportha. Kaks' [[An-28]]-lendint oli mödud.
 
