--- a/Homs.mw
+++ b/Homs.mw
@@ -15,9 +15,15 @@
 }}
 '''Homs''' ({{lang-ar|حمص‎}}) om [[Sirii|Sirijan]] koumanz' surtte lidn. Se om [[Homsan agj]]an (muhafazan) administrativine keskuz.
 
-Lidn sijadase valdkundan päivlaskman keskuzpalas, 501 m ü.m.t. keskmäižel korktusel.
+== Istorii ==
+Eländpunktan aluz om pandud läz 2000. vot edel meiden erad, mainitase dokumentoiš 1. voz'sadaspäi EME. Lidn oli tetab amuižes mirus Emes-nimitusenke ({{lang-grc|Ἔμεσα}} ''Emesa''). Kändihe islamanuskojiden lidnaks i sai nügüdläšt nimitust 7. voz'sadal.
 
-Vl 2004 eläjiden lugu oli 652 609 ristitud 48 km² pindal.
+Homs oli znamasine tegimištoline keskuz edel rahvahanikoiden sodad Sirijas.
+
+== Geografijan andmused ==
+Lidn sijadase valdkundan päivlaskman keskuzpalas, 501 m ü.m.t. keskmäižel korktusel. El'-Asi-jogi (Oront) jagab lidnad päivnouzmaižeks (amuižemb) i päivlaskmaižeks palaks.
+
+Vl 2004 eläjiden lugu oli 652 609 ristitud 48 km² pindal. Ristitišton uskond om erazvuitte (islamanuskojad, alavitad, hristanuskojad).
 
 == Homaičendad ==
 <references />
@@ -25,5 +31,6 @@ Vl 2004 eläjiden lugu oli 652 609 ristitud 48 km² pindal.
 {{Commons|Category:Homs}}
 
 {{stub}}
-[[Kategorii:Sirijan lidnad]]
+[[Kategorii:Homsan agj|*]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Sirijan lidnad]]
