*Empty MediaWiki Message*

--- a/Homs.mw
+++ b/Homs.mw
@@ -10,7 +10,7 @@
  | Pind = 48
  | Fail = Homs Collage.jpg
  | Pämez' = 
- | Telefonkod = +963-
+ | Telefonkod = +963-(0)31
  | Aigvö = tal'vel [[UTC]]+2,<br />kezal [[UTC]]+3
 }}
 '''Homs''' ({{lang-ar|حمص‎}}) om [[Sirii|Sirijan]] koumanz' surtte lidn. Se om [[Homsan agj]]an (muhafazan) administrativine keskuz.
