--- a/MAZ-504.mw
+++ b/MAZ-504.mw
@@ -1,17 +1,20 @@
 [[Fail:MAZ-504 (tractor-trailer).jpg|thumb|right|250px|MAZ-504 ližavedamanke]]
 '''MAZ-504''' ({{lang-ru|МАЗ-504}}) om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] vedim [[jüguavto]]iden täht. Pästtihe [[Minsk]]an avtotegimel vll 1965−1977, sidä kesken MAZ-504 vhesai 1970, MAZ-504A vspäi 1970.
 
-Eksportiruihe erazvuiččihe maihe, sidä kesken Päivnouzmaižhe Saksanmaha.
+Eksportiruihe erazvuiččihe maihe, sidä kesken [[Germanijan Demokratine Tazovaldkund|Päivnouzmaižhe Saksanmaha]].
 
 == Harakteristikad ==
 * Irdmärad: 5555 mm pitte, 2600 mm levette, 2620 mm korkte.
 * Kezroiden baz — 3200 mm, MAZ-504A — 3400 mm
-* Likutim: JaMZ-236 vai JaMZ-238
+* Dizel'likutim: JaMZ-236 vai JaMZ-238 180 hebonväged, MAZ-504B — JaMZ-238 240 hebonväged
 * Ajaimiden konorüt — mehanine, 5 pigut
 * Kaikiš lujemb piguz — 75 km/čas, A i B modifikacijoil 85 km/čas
 * Ičeze täuz' veduz — 6400 kg
 * Jügutoitmižvoind — 7975 kg
 * Poltusen kulutuz — 32 litrad 100 kilometras.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:MAZ-504}}
 
