*Empty MediaWiki Message*

--- a/Kozlovk.mw
+++ b/Kozlovk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Kozlovk<br />Козловка <small>(ven.)</small><br />Куславкка <small>(čuv.)</small>
- | Lidnanznam = Kozlovka.png
+ | Lidnanznam = Kozlovka COA (2020).jpg
  | Flag = 
  | Lidnanznam text = Kozlovkan lidnanznam
  | Flag text = 
