--- a/Igark.mw
+++ b/Igark.mw
@@ -8,18 +8,20 @@
  | Eläjiden lugu = 4,754
  | Voz' = 2017
  | Pind = 9.8
- | Fail = Игарская протока.jpg
+ | Fail = 2020-08-21 14-51-51 Игарка (cropped).jpg
  | Pämez' = Evgenii Nikitin<br />(kül'mku 2017—)
  | Telefonkod = +7-39172-xx-xxx
  | Avtokod = 24. 84. 88. 124
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
+[[Fail:Igarka Permafrostmuseum.jpg|thumb|left|250px|Igähižen rougun muzei (2016)]]
 '''Igark''' ({{lang-ru|Игарка}}) om [[Venäma]]n lidn, lidnankund da port [[Jenisei]]-jogen Igarkan hijaman oiktal randal, [[Krasnojarskan rand]]an lodehes. Mülüb [[Turuhanskan rajon]]ha.
 
 == Istorii ==
 Venäman merimatkadajad paniba ''Igarkan tal'vdundsijad'' kartale ezmäižen kerdan vl 1737. Nügüdläižen eländpunktan aluz om pandud vl 1929 kuti jogiport vedamha ujuden pumaterialoid. Om nimitadud penen jogen mödhe, Jenisein hura ližajogi. Igark sai lidnan statusad vl 1931.
 
 == Geografijan andmused ==
+[[Fail:Игарская протока.jpg|thumb|right|250px|Meriport Jenisein Igark-hijamas, nägu vn 2008 polärižel päiväl]]
 Lidn sijadase [[Pohjoine nabakehkruz|Pohjoižen nabakehkruden]] südäimes, [[igähine roug|igähižen rougun]] zonas, 20 m kesmäižel korktusel valdmeren pindan päl. Matkad [[Krasnojarsk]]hasai om 1287 km suvhe orhal vai 1800 km jogedme, [[Turuhansk]]-rajonkeskushesai 195 km suvipäivnouzmha orhal, se sijadase Jenisein ülezjogen. Lähembaižed järedad lidnad oma [[Noril'sk]] pohjoižhe (220 km orhal) i [[Uz' Urengoi]] päivlaskmha (460 km orhal).
 
 Klimat om [[subarktine vö|subarktine]], terav kontinentaline, luja vilu oleleb tal'vel. Kavag'mec ümbärdab lidnad 10..20 m kortte. Voden keskmäine lämuz om −8,2 C°. Paneb sadegid 494 mm vodes, enamba kezakus-redukus (50..60 mm kus).
@@ -27,9 +29,11 @@ Klimat om [[subarktine vö|subarktine]], terav kontinentaline, luja vilu oleleb 
 Igark om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 117,52 km².
 
 == Eläjad da transport ==
-Vn 2010 Venäman rahvahanlugemižen mödhe<ref>[http://www.gks.ru/free_doc/new_site/population/demo/perepis2010/svod.xls Vn 2010 Venäman rahvahanlugemižen andmused. — Rosstat (''gks.ru'').] {{ref-ru}}</ref> eläjiden lugu oli 6 183 ristitud. Kaikiš suremb lidnan ristitišt oli vl 1939 — 23 600 eläjad, lidnankundan vl 1989 — 26 506 eläjad. Igähižen rougun muzei sijadase lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe<ref>[http://www.gks.ru/free_doc/new_site/population/demo/perepis2010/svod.xls Vn 2010 Venäman rahvahanlugemižen andmused. — Rosstat (''gks.ru'').] {{ref-ru}}</ref> eläjiden lugu oli 6 183 ristitud. Kaikiš suremb lidnan ristitišt oli vl 1939 — 23 600 eläjad, lidnankundan vl 1989 — 26 506 eläjad. Igähižen rougun muzei om avaitud lidnas.
 
 Merilaivad tuldas jogiportha, se seižub 673 kilometras Jenisein jogensuspäi. Tatanmaine civiline Igark-lendimport (''IAA / ИГР'') sijadase 2 km suvipäivnouzmha lidnaspäi, Jenisein Igarkan sarel, tehtas reisid [[Novosibirsk]]ha, [[Tümenin agj]]an ümbrikoihe da Krasnojarskan randadme, sidä kesken čarterid i punolendimil.
+[[Fail:Панорама Игарка.jpg|thumb|center|1000px|<center>Lidnan ühthine nägu, 10. kezaku 2017</center>]]
+[[Fail:Аэропорт Игарка f.jpg|thumb|center|1000px|<center>Igark-lendimportan sauvused vl 2016</center>]]
 
 == Homaičendad ==
 <references />
