--- a/Ilanskii.mw
+++ b/Ilanskii.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 15,013
  | Voz' = 2017
  | Pind = 52.28
- | Fail = Ilanskaya locomotive.jpg
+ | Fail = Иланская водонапорная башня.jpg
  | Pämez' = Vladimir Maksakov<br />(sügüz'ku 2015—)
  | Telefonkod = +7-39173-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -26,6 +26,15 @@ Pen' Algasi-külä kaikenaigaižeta ristitištota mülüb lidnankundha Ilanskija
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 16 111 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 26 911 eläjad vl 1959.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Иланская башня.jpg|Vezičuhunduz (2017)
+Храм святого благоверного князя Александра Невского.jpg|Ph. Aleksandr Nevalaine-ruhtinasen jumalanpert', vn 2017 nägu (om saudud vll 1989−1991)
+Депо на станции Иланская.jpg|Kohenduzdepo raudtestancijal vl 2013
+Иланская средняя школа № 1.jpg|Ilanskijan keskškol nomer 1 Halipovan nimed (2018)
+Ст.Иланская.jpg|Ilanskai-päraudtestancii vl 2013, nägu jaugnikoiden sildaspäi
+</gallery>
 
 == Irdkosketused ==
 * [http://adm-ilansk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''adm-ilansk.ru'').] {{ref-ru}}
