*Empty MediaWiki Message*

--- a/Civil'sk.mw
+++ b/Civil'sk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Civil'sk<br />Цивильск <small>(ven.)</small><br />Çĕрпӳ <small>(čuv.)</small>
- | Lidnanznam = Coat of Arms of Tsivilsk (Chuvashia).png
+ | Lidnanznam = Coat of Arms of Civilsk (Chuvashia).svg
  | Flag = Flag of Civilsk (Chuvashia).svg
  | Lidnanznam text = Civil'skan lidnanznam
  | Flag text = Civil'skan flag
