--- a/Jeniseisk.mw
+++ b/Jeniseisk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 17,999
  | Voz' = 2017
  | Pind = 66.41
- | Fail = Dudareva Street in Yeniseisk.jpg
+ | Fail = Yeniseisk Krasnoyarsk Krai 01.jpg
  | Pämez' = Igor' Antipov<br />(keväz'ku 2010—)
  | Telefonkod = +7-39195-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -22,17 +22,29 @@ Eländpunktan aluz om pandud vl 1619 kuti ''Tungusan lidnuz'', sid' ''Jenisein l
 Vozil 1724−1796 lidn oli Jenisein provincijan keskuseks. Karvanjarmank oleli lidnas 18. voz'sadal elokuidme, i torguihe tavaroid Kitaišpäi da kalad vodes läbi. Vl 1765 kaik 1343 torgovanad oli kirjutadud Jeniseiskas. Möhemba lidnan znamoičend kadotihe, sikš miše saudud Sibirin te madme da Transsib vajehtiba jogiteid. Enamba 100 vanhid kivesižid pertid oma kaičendan al.
 
 == Geografijan andmused ==
+[[Fail:Yeniseisk Airport.jpg|thumb|right|250px|Jeniseisk-lendimportan sauvuz vl 2014]]
 Lidn sijadase [[Jenisei]]-jogen hural randal, mödvedhe [[Angar (jogi)|Angar-jogensuspäi]], 75 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Krasnojarsk]]hasai om 348 km suvhe. Klimat om terav kontinentaline. Lähembaine lidn om [[Lesosibirsk]] 47 km suvipäivnouzmha avtotedme vai Jenisein ülezjogedme.
 
 Jeniseisk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 18 766 ristitud. Kaikiš suremb ristitišt oli 22 845 eläjad vodel 1989. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen mez'jumalankodi om lidnas vspäi 1642, päjumalanpertin da koumen jumalankodin aluz om pandud 18. voz'sadal. [[Islam]]an pühäpert' om saudud lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 18 766 ristitud. Kaikiš suremb ristitišt oli 22 845 eläjad vodel 1989.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen mez'jumalankodi om olmas lidnas vspäi 1642, sen ühtennimine päjumalanpert' om letud vll 1731−1756, koumen jumalanpertin aluz om pandud 18. voz'sadal. [[Islam]]an pühäpert' om saudud lidnas.
 
 Pedagogine kolledž i professionaline škol ratas lidnas.
 
 == Ižanduz da transport ==
 Ei ole tegimišton järedoid edheotandoid Jeniseiskas. Jogistancii om saudud lidnan keskuses. Avtote ühtenzoitab lidnad [[Lesosibirsk]]anke da [[Krasnojarsk]]anke, Jenisein oiktadme randpoledme — [[Pohjoižjeniseisk]]anke. Civiline ''Jeniseisk-lendimport'' (''EIE/ЕНС'') sijadase 5 km lodeheze lidnan keskusespäi, om äkkiližid reisid rajonadme.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Дом Тонконогова по ул. Ленина, 113 2.jpg|Lidnan administracijan sauvuz (2016, ende Tonkonogovan pert')
+Спасо-Преображенский монастырь Енисейск.jpg|Spasan Toižetamižen mez'jumalankodi, vn 2016 nägu
+Eniseisk1.JPG|Adivpert' vl 2014
+Yeniseisk teacher training college.jpg|Jeniseiskan pedagogine kolledž (2004)
+Yeniseisk Krasnoyarsk Krai 02.jpg|Laiv jogivaldmoidenno vl 2016
+</gallery>
 
 == Irdkosketused ==
 * [http://www.eniseysk.com/ Lidnan tobmuden aluzkundoiden oficialine sait (''eniseysk.com'').] {{ref-ru}}
