--- a/Kansk.mw
+++ b/Kansk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Kansk<br />Канск
- | Lidnanznam = Coat of Arms of Kansk (Krasnoyarsk krai) (1855).png
+ | Lidnanznam = Kansk COA (2010).gif
  | Flag = Flag of Kansk (Krasnoyarsk krai).png
  | Lidnanznam text = Kanskan lidnanznam
  | Flag text = Kanskan flag
@@ -22,12 +22,25 @@ Eländpunktan aluz om pandud nügüdläižhe sijha vl 1636 kuti ''Kanan lidnuz''
 == Geografijan andmused ==
 Lidn sijadase Kan-jogen muugotil randoil ([[Jenisei]]n oigedpol'ne bassein), 200 m ü.m.t. keskmäižel korktusel. Matkad [[Krasnojarsk]]hasai om 175 km päivlaskmha orhal vai 230 km «Sibir'»-avtotedme. Lähembaine lidn om [[Borodino (lidn)|Borodino]] 60 km suvipäivlaskmha orhal vai 70 km sil-žo avtotel.
 
-Kansk om lidnümbrikon üks'jäine eländpunkt.
+Kansk om lidnümbrikon üks'jäine eländpunkt. Lidnümbrikon pind om 100,66 km², lidnan — 96,3 km².
 
 == Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 94 226 ristitud. Kaikiš suremb ristitišt oli vll 1990−1995, 110 tuhad eläjid.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 94 226 ristitud. Kaikiš suremb ristitišt oli 110 tuhad eläjid vll 1990−1995.
 
-Ižandusen päsarakod oma mecan ümbriradmine, energetine (Kanskan TEC sijaližel bural hilel), tömašinsauvomine (bumagantegijad mašinad), sauvondkonstrukcijoiden pästand, mugažo plastikpakuitesen tegim radab.
+Ižandusen päsarakod oma mecan ümbriradmine, energetine (Kanskan LEK sijaližel bural hilel), tömašinsauvomine (bumagantegijad mašinad), sauvondkonstrukcijoiden pästand, mugažo plastikpakuitesen tegim radab.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Kansk photo for wiki.jpg|Triumfaline bembelüläh vl 2011
+Площадь Коростелева в Канске.jpg|Korostelevan torg Pühän Stroican päjumalanpertinke tagamal, vn 2015 nägu
+Канск. Церковь Андрея Первозванного.JPG|Ph. Ondrii Ezikuctud jumalanpert', vn 2015 nägu
+Kansk Krasnopartyzanskaya 71.jpg|Zell'lauk vl 2011 (om letud vll 1909−1912 kut torguindsauvuz)
+LAZ-695N in Kansk.JPG|Kanskan kodirandantedištandmuzei (2013, ende «Furor»-sinematograf)
+Kansk - K-t-Kosmos.jpg|«Kosmos»-kinoteatr (2010. voz' vai sen aigemba)
+Канск жд мост.JPG|Raudtesild Kan-joges päliči vl 2015
+LAZ-699R in Kansk.JPG|Kanskan avtobusstancii vl 2013
+Канск-Енисейский из окна поезда.jpg|Kansk-Jeniseiskii-päraudtestancijan sauvuz vl 2017
+</gallery>
 
 == Irdkosketused ==
 * [http://kansk-adm.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''kansk-adm.ru'').] {{ref-ru}}
