--- a/Leib.mw
+++ b/Leib.mw
@@ -12,6 +12,7 @@ Leib om mugoi produkt, kudamban tahtaz mülütab [[jauh]]od i [[vezi|vet]] minim
 * ''Plot'', ''leibplot'' — kubižen vai kehkran forman leib.
 * ''Pärp'' — pen' kehker leib.
 * ''Rungenik'' — rungekaz leib.
+* ''Teplik'' — pen' nižuleib, maged da ližadusidenke päpaloin.
 * ''Valik'' — rugižleib, mustleib.
 * ''Vasleib'' — leib vaumičemha vasad.
 
@@ -19,6 +20,7 @@ Leib om mugoi produkt, kudamban tahtaz mülütab [[jauh]]od i [[vezi|vet]] minim
 * ''Kezakeskust'' — leibätoi aigkeskust, konz edeližen satusen leib lopiše.
 * ''Korišk'' — kuiv leibän supalaine.
 * ''Kromaine'' — leibän päluine.
+* ''Teplikpada'' — astii peksmaha da seižutamha nižutahtast.
 
 == Leibhä sidotud vepsän muštatišed ==
 <blockquote>
@@ -31,6 +33,10 @@ Leib om mugoi produkt, kudamban tahtaz mülütab [[jauh]]od i [[vezi|vet]] minim
 * ''Tämbäi ed sö tulebid leibid.''
 * ''Verhas aitas — enamb leibäd.''
 </blockquote>
+
+== Kacu mugažo ==
+* [[Pirg]]
+* [[Pirgaine]]
 
 == Homaičendad ==
 <references />
