--- a/Leib.mw
+++ b/Leib.mw
@@ -1,6 +1,6 @@
 {{1000}}{{A10000}}
 [[Fail:Grovt brød.jpg|thumb|right|250px|Leibplotun pallišk]]
-'''Leib''' om [[söm|sömižprodukt]], kudambad tehtas [[tahtaz|tahthan]] paštandan, purul ümbriradmižen vai räkištandan mahtal. 
+'''Leib''' om [[söm|sömižprodukt]], kudambad tehtas [[tahtaz|tahthan]] paštandan, purul ümbriradmižen vai räkištandan mahtusel. 
 
 Leib om mugoi produkt, kudamban tahtaz mülütab [[jauh]]od i [[vezi|vet]] minimaližikš, oleleb rohlenzoittud [[sepad|sepil]]. Venämas lugetas leibäks leibtegesid enamba mi 500 grammad vedusenke i 19 % nepsudenke da sen enamba (GOST 32677-2014).
 
