*Empty MediaWiki Message*

--- a/Scorpions.mw
+++ b/Scorpions.mw
@@ -44,7 +44,7 @@
 * 2007 — ''Humanity: Hour I'' (Ristitkund: Čas I)
 * 2010 — ''Sting In The Tail'' (Ogah händas, «Varastamatoi vastmel'ne lop»)
 * 2015 — ''Return To Forever'' (Pördumine igäaigale)
-* 2022 — ''Rock Believer''
+* 2022 — ''Rock Believer'' (Rokanuskoi)
 
 == Homaičendad ==
 <references />
