--- a/Tulun.mw
+++ b/Tulun.mw
@@ -1,9 +1,9 @@
 {{Eländpunkt
  | Nimi = Tulun<br />Тулун
- | Lidnanznam = Coat of Arms of Tulun (Irkutsk oblast).png
- | Flag =
+ | Lidnanznam = Coat of Arms of Tulun.png
+ | Flag = Flag of Tulun.png
  | Lidnanznam text = Tulunan lidnanznam
- | Flag text =
+ | Flag text = Tulunan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 41,671
  | Voz' = 2017
@@ -14,6 +14,7 @@
  | Avtokod = 38. 85. 138
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
 }}
+[[Fail:Tulun town (Irkutsk province, Russia), Sentinel-2 satellite image, 2019-07-19.jpg|thumb|left|250px|Lidnan nägu Man kaimdajaspäi vn 2019 heinkus]]
 '''Tulun''' ({{lang-ru|Тулун}}) om [[Venäma]]n lidn da lidnümbrik [[Irkutskan agj]]an suvipäivlaskmas. Se om [[Tulunan rajon]]an administrativine keskuz, ei mülü rajonha.
 
 == Istorii ==
