--- a/Alaudinsk.mw
+++ b/Alaudinsk.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Alaudinsk<br />Нижнеудинск
- | Lidnanznam = Coat of Arms of Nizhneudinsk (Irkutsk oblast) (1790).png
- | Flag =
+ | Lidnanznam = Nizhneudinsk COA (2019).jpg
+ | Flag = Flag of Nizhneudinsk.png
  | Lidnanznam text = Alaudinskan lidnanznam
- | Flag text =
+ | Flag text = Alaudinskan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 33,954
  | Voz' = 2017
  | Pind = 75
- | Fail = Нижнеудинск. Жд вокзал.jpg
+ | Fail = Панорама - panoramio (20).jpg
  | Pämez' = Aleksandr Putov<br />(keväz'ku 2012—)
  | Telefonkod = +7-39557-xx-xxx
  | Avtokod = 38. 85. 138
@@ -28,6 +28,15 @@ Alaudinsk om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 36 999 ristitud. Kaikiš suremb ristitišt oli 44 tuhad eläjid vll 1992−1996.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Нижнеудинск. Советская, 30.jpg|Riškotamižkomitetan sauvuz (2015)
+Никольский храм Нижнеудинск обед.jpg|Ph. Mikulai-čudonsädajan jumalanpert', vn 2013 nägu
+Нижнеудинск. Трасса Р255.jpg|«Jermak»-torguindkeskuz federaliženno «Sibir'»-trassanno vl 2015
+Автомотодром - panoramio.jpg|Avtomotodrom vl 2010
+Нижнеудинск. Жд вокзал.jpg|Alaudinsk-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Irdkosketused ==
 * [http://www.n-udinsk.ru/ Alaudinskan municipaližen ühtnikan oficialine sait (''n-udinsk.ru'').] {{ref-ru}}
