--- a/Piterin_kaičendsauvusiden_kompleks_sur'vezišpäi.mw
+++ b/Piterin_kaičendsauvusiden_kompleks_sur'vezišpäi.mw
@@ -1,23 +1,23 @@
-[[Fail:Водопропускные дамбы СПб.JPG|pisi|300px|Kaičendsauvusiden kompleks vl 2009.]]
-'''Piterin kaičendsauvusiden kompleks sur'vezišpäi''' vai muite '''Damb''' ([[venäkel'|ven.]] ''Комплекс защитных сооружений Санкт-Петербурга от наводнений'', ''Дамба'') om dambiden i erazvuiččiden gidrotehnižiden sauvusiden kompleks, kudamb vanuse poikpoli [[Suomen laht]]es — [[Bronk (stancii)|Bronk]]aspäi [[Kotlin]]-sarehesai (kudambal sijadase [[Kronštadt]]) i sid' Kotlin-sarespäi [[Sestroreck]]hasai ([[Gorskaja (Sestroreck)|Gorskaja]]-žilo).
+[[Fail:Водопропускные дамбы СПб.JPG|thumb|right|250px|Kaičendsauvusiden kompleks vl 2009]]
+'''Piterin kaičendsauvusiden kompleks sur'vezišpäi''' vai muite '''Damb''' ({{lang-ru|Комплекс защитных сооружений Санкт-Петербурга от наводнений}}, ''Дамба'') om dambiden i erazvuiččiden gidrotehnižiden sauvusiden kompleks, kudamb vanuse poikpoli [[Suomen laht]]es — [[Bronk (stancii)|Bronk]]aspäi [[Kotlin]]-sarehesai (kudambal sijadase [[Kronštadt]]) i sid' Kotlin-sarespäi [[Sestroreck]]hasai ([[Gorskaja (Sestroreck)|Gorskaja]]-žilo).
 
 Dambadme mäneb [[Rengazavtote ümbri Piteriš‎]], sen täht umal Bronkan da Kronštadtan keskes om ajatud vedenalaine tunnel'.
 
-Sauvond vedihe 32 vot (1979-2011), projektan maksarv — 87,3 mlrd rubläd (2010).
+Sauvond vedihe 32 vot (1979−2011), projektan maksarv — 87,3 mlrd rubläd (2010).
 
 Sauvusiden kompleks om tehtud kogonaz i radogoiti vs 2011 elokun 12. päiväspäi.
 
-[[Fail:St petersburg dam.jpg|pisi|center|600px|<center>Piterin kaičendsauvusiden kompleks sur'vezišpäi pohjoižespäi (Sestroreckan čuraspäi) vl 2005.</center>]]
+[[Fail:St petersburg dam.jpg|thumb|center|600px|<center>Piterin kaičendsauvusiden kompleks sur'vezišpäi pohjoižespäi (Sestroreckan čuraspäi) vl 2005</center>]]
 
 == Kacu mugažo ==
 * [[Sur'veded Piteriš]]
 * [[Rengazautote ümbri Piteriš‎]]
 
 == Irdkosketused ==
+* [http://dambaspb.ru/ Kaičendsauvusiden kompleksan direkcijan oficialine sait (''dambaspb.ru'').] {{ref-ru}}
+* [http://www.semiotic.ru/d/index.html ''Semiotic.ru''-sait KSK:an polhe (istorii i informacii).] {{ref-ru}}
+* [http://www.spb-projects.ru/showpage.php?id=600 Informacii KSK:an polhe ''spb-projects.ru''-saital.] {{ref-ru}}
+* [http://kzs.narod.ru/ Piterin kaičendan sur'vezišpäi istorii ''kzs.narod.ru''-saital.] {{ref-ru}}
 {{Commons|Category:Saint Petersburg dam}}
-* [http://dambaspb.ru/ Kaičendsauvusiden kompleksan direkcijan oficialine sait.] {{ref-ru}}
-* [http://www.semiotic.ru/d/index.html Sait KSK:an polhe (istorii i informacii).] {{ref-ru}}
-* [http://www.spb-projects.ru/showpage.php?id=600 Informacii KSK:an polhe "Piterin projektad"-saital.] {{ref-ru}}
-* [http://kzs.narod.ru/ Piterin kaičendan sur'vezišpäi istorii.] {{ref-ru}}
 
 [[Kategorii:Piter]]
