--- a/Mangeškar_Lata.mw
+++ b/Mangeškar_Lata.mw
@@ -10,6 +10,8 @@ Lata oli sündnu Indaur-lidnha vanhembaks lapseks, Dinanath Mangeškar-akt'oran 
 
 Hänel oli ičeze «LM Music»-leiblad.<ref>[http://www.dnaindia.com/entertainment/report_lata-mangeshkar-launches-music-label-with-bhajan-album_1770588 Lata Mangeshkar launches music label with 'Bhajan' album (Lata Mangeškar zavodib muzikleiblan «Bhajan»-al'bomanke) / ''Dnaindia.com''.] {{ref-en}}</ref>
 
+Koli Mumbai-lidnas.
+
 == Valitud pajoiden nimikirjutez ==
 * «''[[Kalaidai]]''» (1951) — «''Ek Bewafa Se Pyar Kiya''», «''Ab Raat Guzarne Wali Hai''», «''Ghar Aaya Mera Pardesi''», «''Dam Bhar Jo Udhar Munh Phere''» (duetal Mukešanke), «''Tere Bina Aag Yeh Chandni''»
 * «''[[420-ižand]]''» (1955) — «''Ichak Dana Beechak Dana''» (duetal Mukešanke), «''O Janewale''», «''Pyar Hua Iqrar Hua''», «''Ramaiya Vastavaiya''», «''Sham Gayi Raat Aayi''»
