--- a/Mangeškar_Lata.mw
+++ b/Mangeškar_Lata.mw
@@ -3,14 +3,14 @@
 | изображение = Lata Mangeshkar - still 29065 crop.jpg
 | описание изображения = Lata Mangeškar vl 2008
 }}
-'''Lata Mangeškar''' ([[marathi]] i [[hindi]]: ''लता मंगेशकर'', {{lang-en|Lata Mangeshkar}}; sünd. [[28. sügüz'ku]] [[1929]], [[Indaur]], [[Madhja Pradeš]], [[Indii]]) oli indijalaine pajatai, mugažo aktris norudes, erasiden fil'miden prodüser. Änetoiti pajoid enamba mi tuhale [[Bollivud]]an fil'mišpäi.
+'''Lata Mangeškar''' ([[marathi]] i [[hindi]]: ''लता मंगेशकर'', {{lang-en|Lata Mangeshkar}}; sünd. [[28. sügüz'ku]] [[1929]], [[Indaur]], [[Madhja Pradeš]], [[Indii]] — kol. [[6. uhoku]] [[2022]], [[Mumbai]], [[Maharaštr]], Indii) oli indine pajatai, mugažo aktris norudes, erasiden fil'miden prodüser. Änetoiti pajoid enamba mi tuhale [[Bollivud]]an fil'mišpäi.
 
 == Biografii ==
 Lata oli sündnu Indaur-lidnha vanhembaks lapseks, Dinanath Mangeškar-akt'oran da pajatajan i hänen Ševanti-akan kanzha. [[Bhosle Aša|Aša]]-, Mina- da Uša-sizared i Hridajanath-vell' oma Latal, hö oma pajatajad i muzikanvändajad mugažo. Lata sai pajatandan ezmäižid urokoid tataspäi vižvoččes igäs. Naine zavodi pajatajan kar'jerad vl 1942, i se jätktase äi voz'kümnid.
 
 Hänel oli ičeze «LM Music»-leiblad.<ref>[http://www.dnaindia.com/entertainment/report_lata-mangeshkar-launches-music-label-with-bhajan-album_1770588 Lata Mangeshkar launches music label with 'Bhajan' album (Lata Mangeškar zavodib muzikleiblan «Bhajan»-al'bomanke) / ''Dnaindia.com''.] {{ref-en}}</ref>
 
-Koli Mumbai-lidnas.
+Mangeškar koli Mumbai-lidnas. Naine ei olend lähtnu mehele i jäi lapsetoman.
 
 == Valitud pajoiden nimikirjutez ==
 * «''[[Kalaidai]]''» (1951) — «''Ek Bewafa Se Pyar Kiya''», «''Ab Raat Guzarne Wali Hai''», «''Ghar Aaya Mera Pardesi''», «''Dam Bhar Jo Udhar Munh Phere''» (duetal Mukešanke), «''Tere Bina Aag Yeh Chandni''»
