*Empty MediaWiki Message*

--- a/Mangeškar_Lata.mw
+++ b/Mangeškar_Lata.mw
@@ -6,7 +6,7 @@
 '''Lata Mangeškar''' ([[marathi]] i [[hindi]]: ''लता मंगेशकर'', {{lang-en|Lata Mangeshkar}}; sünd. [[28. sügüz'ku]] [[1929]], [[Indaur]], [[Madhja Pradeš]], [[Indii]] — kol. [[6. uhoku]] [[2022]], [[Mumbai]], [[Maharaštr]], Indii) oli indine pajatai, mugažo aktris norudes, erasiden fil'miden prodüser. Änetoiti pajoid enamba mi tuhale [[Bollivud]]an fil'mišpäi.
 
 == Biografii ==
-Lata oli sündnu Indaur-lidnha vanhembaks lapseks, Dinanath Mangeškar-akt'oran da pajatajan i hänen Ševanti-akan kanzha. [[Bhosle Aša|Aša]]-, Mina- da Uša-sizared i Hridajanath-vell' oma Latal, hö oma pajatajad i muzikanvändajad mugažo. Lata sai pajatandan ezmäižid urokoid tataspäi vižvoččes igäs. Naine zavodi pajatajan kar'jerad vl 1942, i se jätktase äi voz'kümnid.
+Lata oli sündnu Indaur-lidnha vanhembaks lapseks, Dinanath Mangeškar-akt'oran da pajatajan i hänen Ševanti-akan kanzha. [[Bhosle Aša|Aša]]-, Mina- da Uša-sizared i Hridajanath-vell' oma Latal, hö oma pajatajad i muzikanvändajad mugažo. Lata sai pajatandan ezmäižid urokoid tataspäi vižvoččes igäs. Naine zavodi pajatajan kar'jerad vl 1942, i se jätksihe äi voz'kümnid.
 
 Hänel oli ičeze «LM Music»-leiblad.<ref>[http://www.dnaindia.com/entertainment/report_lata-mangeshkar-launches-music-label-with-bhajan-album_1770588 Lata Mangeshkar launches music label with 'Bhajan' album (Lata Mangeškar zavodib muzikleiblan «Bhajan»-al'bomanke) / ''Dnaindia.com''.] {{ref-en}}</ref>
 
