--- a/Alzamai.mw
+++ b/Alzamai.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 6,040
  | Voz' = 2017
  | Pind = 50.33
- | Fail = Along the Trans-Siberian in Alzamay, Nizhneudinsky rayon.jpg
+ | Fail = Alzamay Post Office - 665160 - 3.jpeg
  | Pämez' = Aleksandr Lebedev<br />(reduku 2005—)
  | Telefonkod = +7-39557-xx-xxx
  | Avtokod = 38. 85. 138
@@ -27,7 +27,18 @@ Lidn sijadase Toporok-jogen hural randal tobjimalaz ([[Angar (jogi)|Angar-jogen]
 Alzamai om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 6 730 ristitud. Kaikiš suremb ristitišt oli 13 060 eläjad vl 1959. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Pölištunuziden aznoičend»-jumalaižen pühäpert' om olmas vspäi 1997.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 6 730 ristitud. Kaikiš suremb ristitišt oli 13 060 eläjad vl 1959.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Pölištunuziden aznoičend»-jumalaižen pühäpert' om olmas vspäi 1997.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Alzamay.jpg|Vezičuhunduz (2011)
+Alzamay Post Office - 665160 - 2.jpeg|Počtan ofis vl 2020 (indeks 665160)
+Alzamay Post Office - 665161 - 1.jpeg|Počtan sauvuz vl 2020 (indeks 665161)
+ЭП1П.jpg|Alzamai-päraudtestancii vl 2013
+Along the Trans-Siberian in Alzamay, Nizhneudinsky rayon.jpg|Alzamai-päraudtestancijan toine sauvuz (2013)
+</gallery>
 
 == Irdkosketused ==
 * [http://alzamai.ru/ Lidnan municipaližen ühtnikan oficialine portal (''alzamai.ru'').] {{ref-ru}}
