--- a/Dubai.mw
+++ b/Dubai.mw
@@ -8,21 +8,25 @@
  | Valdkund = Araban Ühtenzoittud Emiratad
  | Eläjiden lugu = 3,137,463
  | Voz' = 2018-10-08
- | Pind =
- | Fail = Dubai Water Canal Business Bay.jpg
- | Pämez' = 
+ | Pind = 3,885
+ | Fail = DubaiCollage.jpg
+ | Pämez' = Mohammed ibn Rašid Al' Maktum<br />(viluku 2006—)
  | Telefonkod = +971-4
  | Aigvö = [[UTC]]+4
 }}
-'''Dubai''' ({{lang-ar|دبي}}) om [[Araban Ühtenzoittud Emiratad|Araban Ühtenzoittud Emiratoiden]] kaikiš suremb lidn eläjiden lugun mödhe, [[Dubai (emirat)|ühtennimižen emiratan]] pälidn.
+'''Dubai''' ({{lang-ar|دبي}} ''Dubajj'' [dʊˈbajj], lahten arabine virkand: [dəˈbaj]) om [[Araban Ühtenzoittud Emiratad|Araban Ühtenzoittud Emiratoiden]] kaikiš suremb lidn eläjiden lugun mödhe, [[Dubai (emirat)|ühtennimižen emiratan]] pälidn, valdkundan järed meriport.
 
 == Istorii ==
-Nügüdläine eländpunkt mainitaškanzihe vl 1799 kuti kaitud Al Fahidi-lidnusel pen' žilo. Dubai oli britanižen [[Kožundaktaine Oman]]-protektoratan palaks vspäi 1833 i sen administrativižeks keskuseks vll 1954−1971.
+Nügüdläine eländpunkt mainitaškanzihe vl 1799 kuti kaitud Al Fahidi-lidnusel pen' žilo. 20. voz'sadan augotišes lidnut oli Persijan lahten znamasižembiš portoišpäi ičeze ližakahan geografižen sijadusen tagut. Dubai oli britanižen [[Kožundaktaine Oman]]-protektoratan palaks vspäi 1833 i sen administrativižeks keskuseks vll 1954−1971.
+
+Vl 1966 löutihe [[kivivoi]]d emiratas, no sen löudmižsijiden mülü om penemb äjan mi [[Abu Dabi]]-emiratas. Rahad torhen kivivoin möndoišpäi tuldas lidnha vspäi 1969. Emiratan ižandusen alused oma turizm, aviacii, likutamatomuz, finansižed holitišed. Sal'hiden pala kivivoišpäi om läz vit procentad vaiše.
+
+[[Mail'man ozutelend|Mail'man Expo-2020-ozutelend]] mäneb Dubaiš vn 2021 redukus — vn 2022 keväz'kus.
 
 == Geografijan andmused ==
 Lidn sijadase valdkundan pohjoižpäivnouzmas, [[Persijan laht]]en randal, 5 m ü.m.t. keskmäižel korktusel.
 
-Vl 2013 lidnan eläjiden lugu oli 2 106 177 ristitud. Läz 5,6 mln ristituid elädas lidnaglomeracijas (2018). Territorii 4 114 km² pindanke om alištunu lidnan tobmudele.
+Vl 2013 lidnan eläjiden lugu oli 2 106 177 ristitud. Läz 5,6 mln ristituid elädas lidnaglomeracijas (2018). Territorii 4 110 km² pindanke (edel man pudotesiden projektoid oli 3 885 km²) om alištunu lidnan tobmudele.
 
 == Homaičendad ==
 <references />
