--- a/Petroglifad.mw
+++ b/Petroglifad.mw
@@ -1,7 +1,12 @@
-[[Fail:Newspaper rock.jpg|thumb|right|250px|«[[Lehtezkivi]]», [[Jut]]-štat, [[Amerikan Ühtenzoittud Valdkundad|AÜV]].]]
-'''Petroglifad''' vai '''Kall'kuvad''' ({{lang-grc|πέτρος}} — «kivi» i ''γλυφή'' — «leikand») oma išktud [[kivi|kivehe]] [[kuva]]d. Voib vastata kaikil kontinentil päiči Antarktidas. Ei lugegoi kuvid hüvänke znamoiden sistemanke petroglifoikš.
+[[Fail:Newspaper rock.jpg|thumb|right|250px|«[[Lehtezkivi]]», [[Jut]]-štat, [[Amerikan Ühtenzoittud Valdkundad|AÜV]]]]
+'''Petroglifad''' vai '''Kall'kuvad''' ({{lang-grc|πέτρος}} ''petros'' «kivi» i γλυφή ''glife'' «leikand») oma išktud [[kivi|kivehe]] [[kuva]]d. Voib vastata kaikil kontinentil päiči Antarktidas. Ei lugegoi petroglifoikš kuvid hüvänke znamsistemanke.
 
-Kaikiš amuižembad kuvad oma mecživatad, kirjutihe niid 40..20 tuhad vot tagaz. Elon kuvad (mectuz, kargud, torad, verotegod) zavodidas aigaližes [[neolit]]as (6.−4. voz'tuha edel m.e.).
+Kaikiš amuižembad kuvad oma mecživatad, kuvatihe niid 40..20 tuhad vozid tagaz. Elon kuvad (mectuz, kargud, torad, verotegod) zavodidas aigaližes [[neolit]]as (6.−4. voz'tuha edel m.e.). Pirtihe kuvid mujuil mugažo, no se mujutadud eziauguine nägu kaičenus hondomb, voib restavriruida mujuid niiden jättud palaižiden mödhe.
+
+Kuviden sädamižen ezmäine met oli verotegoiden oigenduz.
+
+== Homaičendad ==
+<references />
 
 {{stub}}
 [[Kategorii:Petroglifad| ]]
