--- a/Petroglifad.mw
+++ b/Petroglifad.mw
@@ -1,9 +1,13 @@
 [[Fail:Newspaper rock.jpg|thumb|right|250px|«[[Lehtezkivi]]», [[Jut]]-štat, [[Amerikan Ühtenzoittud Valdkundad|AÜV]]]]
-'''Petroglifad''' vai '''Kall'kuvad''' ({{lang-grc|πέτρος}} ''petros'' «kivi» i γλυφή ''glife'' «leikand») oma išktud [[kivi|kivehe]] [[kuva]]d. Voib vastata kaikil kontinentil päiči Antarktidas. Ei lugegoi petroglifoikš kuvid hüvänke znamsistemanke.
+'''Petroglifad''' vai '''Kall'kuvad''' ({{lang-grc|πέτρος}} ''petros'' «kivi» i γλυφή ''glife'' «leikand») oma išktud [[kivi|kivehe]] vai pirtud mujuil [[kuva]]d. Voib vastata kaikil kontinentil päiči Antarktidas. Ei lugegoi petroglifoikš kuvid hüvänke znamsistemanke.
 
-Kaikiš amuižembad kuvad oma mecživatad, kuvatihe niid 40..20 tuhad vozid tagaz. Elon kuvad (mectuz, kargud, torad, verotegod) zavodidas aigaližes [[neolit]]as (6.−4. voz'tuha edel m.e.). Pirtihe kuvid mujuil mugažo, no se mujutadud eziauguine nägu kaičenus hondomb, voib restavriruida mujuid niiden jättud palaižiden mödhe.
+Kaikiš amuižembad kuvad oma mecživatad, kuvatihe niid 40..20 tuhad vozid tagaz. Elon kuvad (mectuz, kargud, torad, verotegod) zavodidas aigaližes [[neolit]]as (6.−4. voz'tuha edel m.e.). Pirtihe kuvid mujuil mugažo, no se mujutadud eziauguine nägu om kaičenus hondomb, voib restavriruida mujuid niiden jättud palaižiden mödhe. Tehtas kuviden kompjuterkopijoid (sidä kesken 3D-kuvid) i kävutadas tedoidusiden täht.
 
-Kuviden sädamižen ezmäine met oli verotegoiden oigenduz.
+Kuviden sädamižen ezmäine met oli verotegoiden oigenduz, löutas živatoiden-andoiden jändusid petroglifoidenno. Om kadonuzid-ki živatoid amuižiš kuviš, oz., [[mamant]], [[sablänhambhaine tigr]].
+
+== Kacu mugažo ==
+* [[Geoglifad]]
+* [[Kall'voimujupirdand]]
 
 == Homaičendad ==
 <references />
