--- a/Zaiceva_Marja.mw
+++ b/Zaiceva_Marja.mw
@@ -1,7 +1,13 @@
 {{Personalii}}
-'''Marja Zaiceva''' om [[vepsläižed|vepsläine]] kelentedomez'. Filologijan kandidat.
+'''Marja Zaiceva''' om [[vepsläižed|vepsläine]] kelentedomez'. Filologijan tedoiden kandidat, tedoidab [[vepsän kel']]t.
 
-Monografijad: "Verbiden suffiksaline sauvond vepsän keles" (1978), "Vepsän kelen sintaksis" (2001, suomen kelel); "Vepsän kelen ozutesed" (1969, ühtes Mulložen M.), "Vepsän kelen vajehnik" (1972, ühtes Mulložen M.), kel'tedoližed kirjutused erazvuiččiš keradusiš da aiglehtesiš.
+Tedonaižen monografijad:
+* ''Vepsän kelen ozutesed'' (1969, Mulložen M. ühtes),
+* ''Vepsän kelen vajehnik'' (1972, Mulložen M. ühtes),
+* ''Verbiden suffiksaline sauvond vepsän keles'' (1978),
+* ''Vepsän kelen sintaksis'' (2001, suomen kelel).
+
+Marija Zaiceva sädi kel'tedoližid kirjutusid mugažo erazvuiččiš keradusiš da aiglehtesiš.
 
 {{stub}}
 [[Kategorii:Vepsän kelentedomehed]]
