--- a/Itson_Meri_Ellen.mw
+++ b/Itson_Meri_Ellen.mw
@@ -1,9 +1,11 @@
 {{Personalii}}
 '''Meri Ellen Itson''' ({{lang-en|Mary Ellen Itson}}) om [[AÜV|amerikalaine]] aktris da lavastai.
 
-== Fil'mografii (serialoid da massižid scenoid lugemata) ==
+== Fil'mografii ==
 * ''«[[Adehtpraznik]]»'' (2008)
-* ''«[[Mecamehen sol'm]]»'' (2013)
+* ''«[[Mecamehen sol'm]]»'' (2013, {{lang-en|Devil's Knot}})
+* ''«Lopmätoi armastuz»'' (2014, Endless Love)
+* ''«[[Piguden himo]]»'' (2014, Need for Speed)
 
 == Irdkosketused ==
 * {{IMDb|2812242}}
