*Empty MediaWiki Message*

--- a/Itson_Meri_Ellen.mw
+++ b/Itson_Meri_Ellen.mw
@@ -2,8 +2,8 @@
 '''Meri Ellen Itson''' ({{lang-en|Mary Ellen Itson}}) om [[AÜV|amerikalaine]] aktris da lavastai.
 
 == Fil'mografii ==
-* ''«[[Adehtpraznik]]»'' (2008)
-* ''«[[Mecamehen sol'm]]»'' (2013, {{lang-en|Devil's Knot}})
+* ''«[[Adehtpraznik]]»'' (2008, {{lang-en|Prom Zombie}})
+* ''«[[Mecamehen sol'm]]»'' (2013, Devil's Knot)
 * ''«Lopmätoi armastuz»'' (2014, Endless Love)
 * ''«[[Need for Speed: Pigusen himo]]»'' (2014, Need for Speed)
 
