--- a/Itson_Meri_Ellen.mw
+++ b/Itson_Meri_Ellen.mw
@@ -1,8 +1,9 @@
 {{Personalii}}
-'''Meri Ellen Itson''' ({{lang-en|Mary Ellen Itson}}) om [[AÜV|amerikalaine]] aktris da lavastai.
+'''Meri Ellen Itson''' ({{lang-en|Mary Ellen Itson}}) om [[AÜV|amerikalaine]] aktris da lavastai. Edesti sekundarižen planan rolid.
 
 == Fil'mografii ==
-* ''«[[Adehtpraznik]]»'' (2008, {{lang-en|Prom Zombie}})
+* ''«[[Adehtpraznik]]»'' (2008, {{lang-en|Dance of the Dead}})
+* ''«Üks'jäine armastuz»'' (2009, Lonely Love) — Ebbi:n mam
 * ''«[[Mecamehen sol'm]]»'' (2013, Devil's Knot)
 * ''«Lopmätoi armastuz»'' (2014, Endless Love)
 * ''«[[Need for Speed: Pigusen himo]]»'' (2014, Need for Speed)
