--- a/Morris_Trevor_(muzikankirjutai).mw
+++ b/Morris_Trevor_(muzikankirjutai).mw
@@ -1,8 +1,8 @@
 {{Znamoičendad|Morris Trevor}}
 {{Personalii}}
-'''Trevor Morris''' (mugažo [[anglijan kel'|anglijan]] i [[francijan kel'|francijan]] kelil; sünd. [[25. semendku]] [[1970. voz'|1970]], [[London (Ontario)]], [[Kanad]]) om kanadalaine muzikankirjutai da prodüser.
+'''Trevor Morris''' (mugažo [[anglijan kel'|anglijan]] i [[francijan kel'|francijan]] kelil; sünd. [[25. semendku]] [[1970. voz'|1970]], [[London (Ontario)]], [[Kanad]]) om kanadine muzikankirjutai orkestran täht da muzikprodüser. Sirdi Los Andželesha vl 1999 i zavodi kar'jerad Gollivudas.
 
-Äneti muzikad [[serial]]oiden da [[kompjutervänd]]oiden surele lugule. «[[Emmi]]»-premijan laureat (2007).
+Sädi da äneti muzikad [[TV-serial]]oiden, [[fil'm]]iden da [[kompjutervänd]]oiden surele lugumärale. «[[Emmi]]»-premijan laureat (2007).
 
 == Homaičendad ==
 <references/>
