--- a/Kompanis_Garden.mw
+++ b/Kompanis_Garden.mw
@@ -1,9 +1,9 @@
-[[Fail:Walking-companygardens.jpg|thumb|right|250px|Kompanis Garden.]]
-'''Kompanis Garden''' ({{lang-en|Company's Garden}}, {{lang-af|Kompanjiestuin}}) om järed lidn[[puišt]] [[Keiptaun]]as ([[Suviafrikan Tazovaldkund]]).
+[[Fail:Company's Garden Cape Town.jpg|thumb|right|250px|Kompanis Garden, nägu Laudmägenke tagamal vn 2018 heinkus]]
+'''Kompanis Garden''' ({{lang-en|Company's Garden}}, {{lang-af|Kompanjiestuin}}) om [[puišt]] [[Keiptaun]]-lidnan keskuzpalas, [[Suviafrikan Tazovaldkund]]. Oigedsaumaižen puišton pind om 3,2 ga.
 
-Puišt om kaikiš amuižemb Suviafrikas, om sätud lidnan keskuzpalas. Regionan ezmäižed evropalaižed sirdanuded mehed kazvataškanziba veresad produkcijad väghižel mahusel varatoitamha matknikoiden laivoid Kap-nemel 1650-nziš vozišpäi. Toihe ičezenke evropižid kazmusid. Ottas vet Molteno-vezivaradimespäi.
+Puišt om kaikiš amuižemb Suviafrikas. Regionan ezmäižed evropižed sirdanuded mehed kazvataškanziba veresad produkcijad väghižel mahusel varatoitamha matknikoiden laivoid Kap-nemel 1650-nziš vozišpäi. Toihe ičezenke evropižid kazmusid. Ottas vet Molteno-vezivaradimespäi.
 
-Rahvahaline galerei, muzei, restoran i muštpachad sijadasoiš puištos.
+Rahvahaline Izuko-galerei i muzei, restoran, muštpachad sijadasoiš puištos. Vedadas Keiptaunan festivalid siš joga vodel.
 
 == Homaičendad ==
 <references />
