--- a/Kompanis_Garden.mw
+++ b/Kompanis_Garden.mw
@@ -3,7 +3,14 @@
 
 Puišt om kaikiš amuižemb Suviafrikas. Regionan ezmäižed evropižed sirdanuded mehed kazvataškanziba veresad produkcijad väghižel mahusel varatoitamha matknikoiden laivoid Kap-nemel 1650-nziš vozišpäi. Toihe ičezenke evropižid kazmusid. Ottas vet Molteno-vezivaradimespäi.
 
-Rahvahaline Izuko-galerei i muzei, restoran, muštpachad sijadasoiš puištos. Vedadas Keiptaunan festivalid siš joga vodel.
+Rahvahaline Iziko-galerei i muzei, Kompanis Garden-restoran, istorižed muštpachad sijadasoiš puištos. Vedadas Keiptaunan festivalid siš joga vodel.
+
+Toižiden mel'heižtahoiden keskes oma:
+* kaikiš amuižemb kul'tiviruidud [[gruš]]pu Suviafrikas (läz vspäi 1652)
+* rozasad, om sätud vl 1929
+* kalutadud hüvin kalauit
+* pallištod i laučad
+* heiniden da sukkulentoiden sad.
 
 == Homaičendad ==
 <references />
