--- a/Rauk,_rauk_Pavel.mw
+++ b/Rauk,_rauk_Pavel.mw
@@ -32,7 +32,7 @@
 
 == Rolid ==
 * ''[[Pavel I]]'' — [[Suhorukov Viktor|Viktor Suhorukov]]
-* ''[[Marija Födorovna (Pavelan I ak|Marija Födorovna]]'' — [[Miskina Oksana|Oksana Miskina]]
+* ''[[Marija Födorovna (Pavelan I ak|Marija Födorovna]]'' — [[Misina Oksana|Oksana Misina]]
 * ''[[Aleksandr I]]'' — [[Barabaš Aleksei|Aleksei Barabaš]]
 * ''[[Konstantin Pavlovič]]'' — [[Karpov Jevgenii|Jevgenii Karpov]]
 * ''[[Palen Pötr|Palen-graf]]'' — [[Jankovskii Oleg|Oleg Jankovskii]]
